@@ -65,6 +65,7 @@ Version 1.11.0-svn:
      all of which have better replacements:
      get_side, get_side_count, get_unit_type_ids, get_unit_type,
      register_wml_action
+   * Changed: Extended support for toggle_button.
  * Multiplayer:
    * Fix an accidental terrain type change in Isar's Cross
    * Fix attacker side being human in 6p_Team_Survival (bug #19400)
